--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -36,13 +36,14 @@
                 app:layout_constraintTop_toTopOf="parent"
                 />
 
-            <ImageView
-                android:id="@+id/imageView"
+            <ImageButton
+                android:id="@+id/imageButton"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 app:layout_constraintBottom_toBottomOf="@+id/image_profile"
                 app:layout_constraintEnd_toEndOf="@+id/image_profile"
-                app:srcCompat="@drawable/edit_icon"
+                android:background="@drawable/edit_icon"
+                android:onClick="handleChangeAvatar"
                 />
 
             <com.google.android.material.textfield.TextInputLayout
@@ -188,6 +189,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:onClick="handleSubmit"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
